fix Сгенерировать сваггер на реализованное АПИ
